--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <div id="app"></div>  
+  <script src="/assets/js/vendor.js"></script>
   <script src="/assets/js/app.js"></script>
 </body>
 
